Bug 176244 - Fix column resize and reorder issues when direction is rtl; r=roc,enndeakin sr=roc